--- a/README.org
+++ b/README.org
@@ -30,7 +30,7 @@ Download the pretrained model
 download_pretrained_vae(model_name = "mo_county", save_dir = "./datasets")
 #+end_src
 
-Train VGMSFH using numpyro. GEOID represents FIPS codes or other equivalent identifiers.
+Train =VGMSFH= using numpyro. =GEOID= represents FIPS codes or other equivalent identifiers.
 #+begin_src ess-r :session :results output :exports both
 model <- vgmsfh_numpyro(y, y_sigma, X, W,
   GEOID = GEOID,
@@ -44,7 +44,7 @@ plot(model, type = "compare")
 #+end_src
 [[file:plot/compare.png]]
 
-For multivariate models, we can select a response variable to plot with `var_idx`
+For multivariate models, we can select a response variable to plot with =var_idx=
 #+begin_src ess-r :session :results output :exports both
 plot(model, type = "compare", var_idx = 2)
 #+end_src
@@ -58,7 +58,7 @@ plot(model, type = "estimate", var_idx = 1)
 
 * Train VAE
 
-For advanced user, the following command can be used to train your own generator for spatial random effects. The resulting VAE is saved to the folder `./model`.
+For advanced user, the following command can be used to train your own generator for spatial random effects. The resulting VAE is saved to the folder =./model=.
 #+begin_src ess-r :session :results output :exports both
 loss <- train_vae(W = W,
   GEOID = GEOID,
@@ -69,7 +69,7 @@ loss <- train_vae(W = W,
   epoch = 10000)
 #+end_src
 
-Here, `W` is the adjacency matrix of your geography, which can be produced with `spdep` package. For example,
+Here, =W= is the adjacency matrix of your geography, which can be produced with =spdep= package. For example,
 #+begin_src ess-r :session :results output :exports both
 W <- nb2mat(poly2nb(mo_county_data), style = "B", zero.policy = TRUE)
 #+end_src
